Bug 156935 - kopete misses some QT signal to connect to
Summary: kopete misses some QT signal to connect to
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: MSN Plugin (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-29 21:27 UTC by David
Modified: 2008-02-07 04:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David 2008-01-29 21:27:52 UTC
Version:           svn (using Devel)
Installed from:    Compiled sources
OS:                Linux

This bug is similar to bug #59309, but this time, the signal missing is in MSN protocol. This are the errors I get when starting kopete in a konsole:

stormbyte@DarkEvil ~ $ kopete
kopete(6397)/libkopete Kopete::PluginManager::loadPluginInternal: Unable to find a plugin named ' "" '!
stormbyte@DarkEvil ~ $ Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)
kopete(6397)/kopete (msn) MSNSocket::slotSocketError: Error:  17  ( "remote host closed connection" )
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QString,long unsigned int,MSNChatSession*,MSNContact*)

Other thing I want to point out is that kopete does not work well with more than one account configured, should I file other bug? or maybe it is related to this one?
Comment 1 David 2008-01-29 21:30:35 UTC
This can be reproduced just with trying to login in a MSN account, and do nothing more.
And, look at the line: kopete(6397)/kopete (msn) MSNSocket::slotSocketError: Error:  17  ( "remote host closed connection" ) is this really an error? I mean, as I didn't anything more than login, I don't know why kopete is getting this error...
svn info /usr/portage/distfiles/svn-src/KDE/kdenetwork/kdenetwork/
Path: /usr/portage/distfiles/svn-src/KDE/kdenetwork/kdenetwork
URL: svn://anonsvn.kde.org/home/kde/trunk/KDE/kdenetwork
Repository Root: svn://anonsvn.kde.org/home/kde
Repository UUID: 283d02a7-25f6-0310-bc7c-ecb5cbfe19da
Revision: 767931
Node Kind: directory
Schedule: normal
Last Changed Author: lappelhans
Last Changed Rev: 767854
Last Changed Date: 2008-01-28 22:59:52 +0100 (lun, 28 ene 2008)
Comment 2 Charles Connell 2008-01-30 03:24:33 UTC
This doesn't happen to me. There must be something about your MSN account. What is your buddy list like?
Comment 3 Matt Rogers 2008-02-07 04:53:02 UTC
SVN commit 771864 by mattr:

Fix wrong signal signatures. Patch by Carlo Segato.

Thanks!
BUG: 156935



 M  +2 -2      msnchatsession.cpp  
 M  +1 -1      msnchatsession.h  
 M  +1 -1      msnprotocol.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=771864
Comment 4 Matt Rogers 2008-02-07 04:56:14 UTC
SVN commit 771866 by mattr:

Backport patch for 156935.

Should be fixed for KDE 4.0.2
CCBUG: 156935



 M  +2 -2      msnchatsession.cpp  
 M  +1 -1      msnchatsession.h  
 M  +1 -1      msnprotocol.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=771866