Fix wrong signal signatures. Patch by Carlo Segato.

Thanks!
BUG: 156935


svn path=/trunk/KDE/kdenetwork/kopete/; revision=771864